@@ -9,8 +9,8 @@ Latest Release: version <code>@VERSION@</code> from @DATE@: <a href="whatsnew.ht
 	<table class="middle" style="width:85%;">
 		<tr>
 			<td rowspan="2"><img src="static/os_mac.png" alt="Mac OSX"/></td>
-			<td rowspan="2">
-				<a href="http://sourceforge.net/projects/xjadeo/files/xjadeo/v@VERSION@/jadeo-@VERSION@.dmg/download">MacOS/X</a></td>
+			<td>
+				<a href="http://sourceforge.net/projects/xjadeo/files/xjadeo/v@VERSION@/jadeo-arm-@VERSION@.dmg/download">macOS (arm64)</a></td>
 			<td rowspan="2"><img src="static/os_win.png" alt="Windows"/></td>
 			<td>
 				<a href="http://sourceforge.net/projects/xjadeo/files/xjadeo/v@VERSION@/xjadeo_installer_w64_v@WINVERSION@.exe/download">Windows 64bit</a></td>
@@ -19,6 +19,7 @@ Latest Release: version <code>@VERSION@</code> from @DATE@: <a href="whatsnew.ht
 				<a href="http://sourceforge.net/projects/xjadeo/files/xjadeo/v@VERSION@/xjadeo-x86_64-linux-gnu-v@VERSION@.tgz/download">Linux 64bit</a></td>
 		</tr>
 		<tr>
+			<td><a href="http://sourceforge.net/projects/xjadeo/files/xjadeo/v@VERSION@/jadeo-@VERSION@.dmg/download">macOS/X (Intel)</a></td>
 			<td><a href="http://sourceforge.net/projects/xjadeo/files/xjadeo/v@VERSION@/xjadeo_installer_w32_v@WINVERSION@.exe/download">Windows 32bit</a></td>
 			<td><a href="http://sourceforge.net/projects/xjadeo/files/xjadeo/v@VERSION@/xjadeo-i386-linux-gnu-v@VERSION@.tgz/download">Linux 32bit</a></td>
 		</tr>
