@@ -1,5 +1,10 @@
 <h1>News</h1>
 
+<h2>Version 0.8.12</h2>
+<p>Fix Retina/UI scaling when building on macOS 10.15 (and later). This fixes display
+on Apple Silicon macbook systems. xjadeo 0.8.12 can now also be built with ffmpe v5.1.
+</p>
+
 <h2>Version 0.8.11</h2>
 <p>Build system and binary dependency update only. xjadeo binaries now feature
 <a href="http://www.ffmpeg.org/">ffmpeg</a> v5.0
